@@ -13,7 +13,6 @@
   "item.bygone.ancient_chest_boat": "Ancient Chest Boat",
   "item.bygone.gourd_on_a_stick": "Gourd on a Stick",
   "item.bygone.gourd_flesh": "Gourd Flesh",
-  "item.bygone.gourd_seeds": "Gourd Seeds",
   "item.bygone.glow_gourd_dango": "Glow Gourd Dango",
   "item.bygone.glow_gourd_soup": "Glow Gourd Soup",
   "item.bygone.null": "null",
@@ -38,6 +37,9 @@
   "item.bygone.glow_gourd_beige_slice": "Beige Glow Gourd Slice",
   "item.bygone.glow_gourd_muave_slice": "Muave Glow Gourd Slice",
   "item.bygone.glow_gourd_verdant_slice": "Verdant Glow Gourd Slice",
+  "item.bygone.glow_gourd_beige_seeds": "Beige Glow Gourd Seeds",
+  "item.bygone.glow_gourd_muave_seeds": "Muave Glow Gourd Seeds",
+  "item.bygone.glow_gourd_verdant_seeds": "Verdant Glow Gourd Seeds",
   "item.bygone.gold_beak_armor": "Golden Big Beak Armor",
   "item.bygone.iron_beak_armor": "Iron Big Beak Armor",
   "item.bygone.diamond_beak_armor": "Diamond Big Beak Armor",
