@@ -1,0 +1,6 @@
+{
+  "parent": "minecraft:item/generated",
+  "textures": {
+    "layer0": "bygone:item/glow_gourd_seeds"
+  }
+}
