@@ -7,7 +7,7 @@
     "fog_color": 12764056,
     "additions_sound": {
       "sound": "minecraft:ambient.crimson_forest.additions",
-      "tick_chance": 0.0055
+      "tick_chance": 0.0005
     },
     "mood_sound": {
       "block_search_extent": 8,
